nitpick: modern java
Signed-off-by: subhramit <subhramit.bb@live.in>