@@ -1,6 +1,5 @@
 package org.jabref.gui.frame;
 
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.Map;
 import java.util.Set;
@@ -29,7 +28,7 @@ public class SidePanePreferences {
     private SidePanePreferences() {
         this(
                 EnumSet.of(SidePaneType.WEB_SEARCH, SidePaneType.GROUPS), // Default visible panes (OPEN_OFFICE omitted)
-                Collections.emptyMap(),                                   // Default preferred positions
+                Map.of(),                                   // Default preferred positions
                 0                                                         // Default web search fetcher index
         );
     }
